Fixed image in navbar spacing + added privacy policy modal

--- a/home.css
+++ b/home.css
@@ -13,7 +13,6 @@
   line-height: 160px;
   margin: 20px;
 	text-align: center;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
 }
 .big-boi-link:before {
@@ -78,12 +77,13 @@
   .big-boi-link{
     color: white;
     border: 1px solid rgba(255,255,255,0.5);
+    box-shadow: 10px 10px 10px rgba(255, 255, 255, 0.1);
   }
   .big-boi-link:hover {
   color: #000000;
   }
   .big-boi-link:before{
-    background: white;
+    background: #f5f5f5;
   }
 }
 
@@ -91,6 +91,7 @@
   .big-boi-link{
     color: black;
     border: 1px solid rgba(0,0,0,0.5);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
   }
   .big-boi-link:hover {
     color: #fff;
