--- a/main.css
+++ b/main.css
@@ -106,11 +106,12 @@ laggy ass cursor effect
 /*End Cursor Fix*/
 
 .logo{
-  height: 45px;
-  width: 45px;
+  height: 4.5vh;
+  width: 4.5vh;
+  top: 0.75vh;
   position: relative;
 /*   top: 0.25vh; */
-  z-index: 9999;
+  z-index: 30;
 }
 
 .link-down{
@@ -125,6 +126,7 @@ body{
 }
 footer{
     margin-top: auto;
+    z-index:40;
 }
 
 .error404{
@@ -145,6 +147,92 @@ h2.error404{
 	font-weight:bold;
 }
 
+
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 50; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 0px;
+  width: 80%;
+  height: 80%;
+  overflow: scroll;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s
+  z-index: 51;
+  font-family: 'Lato', sans-serif;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0} 
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background: rgba(30,30,30,1);
+  color: white;
+  border-bottom: 3px solid rgba(255,255,255,0.2);
+  padding: 20px 10px;
+  text-align: center;
+}
+
+.modal-body {
+  padding: 2px 16px;
+  background: #000;
+  color: white;
+  border-bottom: 3px solid rgba(255,255,255,0.2);
+  border-left: 3px solid rgba(255,255,255,0.2);
+  border-right: 3px solid rgba(255,255,255,0.2);
+  line-height: 1.8;
+}
+
+
+
+
+
+
 /*Light Dark Theme CSS*/
 @media (prefers-color-scheme: dark) {
   body{
@@ -160,8 +248,9 @@ h2.error404{
     background: #fff;
   }
   #nav-bar{
-    border: 3px solid rgba(255, 255, 255, 0.1);
-    background: rgba(255, 255, 255, 0.2);
+    border: 0px;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+    background: rgba(100,100,100,0.2);
   }
   .link{
     color: white;
@@ -169,6 +258,9 @@ h2.error404{
   .link:hover{
   color: #848484;
   } 
+    a{
+    color: white;
+  }
 }
 
 @media (prefers-color-scheme: light) {
@@ -185,7 +277,8 @@ h2.error404{
     background: #000;
   }
   #nav-bar{
-    border: 3px solid rgba(255, 255, 255, 0.09);
+    border: 0px;
+    border-bottom: 3px solid rgba(255, 255, 255, 0.09);
     background: rgba(255, 255, 255, 0.3);
   }
   .link{
@@ -194,4 +287,7 @@ h2.error404{
   .link:hover{
   color: #848484;
   } 
+    a{
+    color: black;
+  }
 }
